# Bedrock-Bridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Project Brief_ Bedrock-Bridge.md  README.md  flake.nix  index.html  package.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/discovery/: mod.rs
crates/core/src/profile/: mod.rs
crates/core/src/proxy/: mod.rs
crates/core/tests/: discovery_integration.rs
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: bedrock-bridge.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/profile/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/settings/: mod.rs
