[package]
name = "bedrock-bridge"
version = "0.1.0"
description = "UDP relay for Minecraft Bedrock Edition"
authors = ["shift"]
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "bedrock_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bedrock-bridge-core = { path = "../crates/core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
