[package]
name = "bedrock-bridge-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "macros", "time", "test-util"] }
